plugins {
    id 'application'
}

description = 'The document platform in one container: repo-service, the authenticated intake service, the parsing coordinator with the embedded reference parser, the durable jobs worker, the git-backed schema registry (on by default, jobs verbs mounted), the streaming parser playground, and the search service, all wired over the in-process transport'

dependencies {
    implementation project(':protomolt-authz')
    implementation project(':protomolt-authz-jdbc')
    implementation project(':protomolt-composer')
    implementation project(':protomolt-repo-service')
    implementation project(':protomolt-repo-container')
    implementation project(':protomolt-intake-service')
    implementation project(':protomolt-parse-service')
    implementation project(':protomolt-parse-text')
    implementation project(':protomolt-parse-document')
    implementation project(':protomolt-parse-playground')
    implementation project(':protomolt-jobs-service')
    implementation project(':protomolt-search-service')
    implementation project(':protomolt-screening')
    implementation project(':protomolt-search-snapshot-s3')
    implementation platform(libs.awssdk.bom)
    implementation libs.awssdk.s3
    implementation libs.awssdk.url.connection.client
    // The config lane: typed config documents pulled from the registry
    // with verify-then-swap; the parse routing rules are the first
    // consumer.
    implementation project(':protomolt-config')
    implementation project(':protomolt-config-registry')
    implementation project(':protomolt-config-kafka')
    implementation project(':protomolt-search-console')
    implementation project(':protomolt-metric-lucene')
    implementation project(':protomolt-metric-spi')
    implementation project(':protomolt-protobuf-metric')
    // The metrics role's optional lake engine: the executor, the sink's
    // LocalFileIO (this build is Hadoop-free), and the catalog classes the
    // DOCUMENT_PLATFORM_METRICS_ICEBERG_* family selects between. sqlite
    // rides along so the one-container jdbc:sqlite catalog works out of
    // the box.
    implementation project(':protomolt-metric-iceberg')
    implementation project(':protomolt-iceberg')
    // The lake's optional object-store file plane (S3FileIO).
    implementation project(':protomolt-iceberg-s3')
    implementation libs.iceberg.core
    runtimeOnly libs.sqlite.jdbc
    implementation project(':protomolt-repo-proto')
    implementation project(':protomolt-acquire-s3')
    implementation project(':protomolt-acquire-jdbc')
    implementation project(':protomolt-search-proto')
    implementation project(':protomolt-search-index-spi')
    implementation project(':protomolt-search-chunk')
    implementation project(':protomolt-search-embedding')
    // The product-default embedding model: on the classpath so a configured
    // Model2Vec model activates the vector lane, and the preset names its
    // configuration knobs by constant.
    implementation project(':protomolt-search-embedding-model2vec')
    implementation project(':protomolt-workflow')
    implementation project(':protomolt-actions')
    implementation project(':protomolt-registry')
    implementation project(':protomolt-registry-service')
    implementation project(':protomolt-schema-confluent')
    implementation project(':protomolt-sources')
    implementation project(':protomolt-grpc-service-profile')
    implementation libs.grpc.netty.shaded
    implementation libs.grpc.stub
    implementation libs.grpc.inprocess
    implementation libs.jackson.databind
    implementation libs.slf4j.api

    runtimeOnly libs.slf4j.simple

    testImplementation project(':protomolt-repo-container')
    testImplementation libs.testcontainers.postgresql
    testImplementation libs.testcontainers.localstack
    testImplementation libs.testcontainers.junit.jupiter
    testRuntimeOnly libs.slf4j.simple
}

// The search service links the Lucene 11 line, which ships Java 25 bytecode:
// the app and its tests need a 25 runtime (same pin as :protomolt-search-index-lucene).
tasks.withType(Test).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'ai.pipestream.proto.platform.DocumentPlatformMain'
}
